# rscf_a_zephyr

./: .gitignore  README.md  west.yml
.github/workflows/: ci.yml
app/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
app/boards/: rscf_a_f427iih6.overlay  rscf_a_f427iih6_jlink_vcom.overlay
app/src/: main.c
boards/arm/rscf_a_f427iih6/: Kconfig.board  Kconfig.defconfig  Kconfig.rscf_a_f427iih6  board.cmake  board.yml  rscf_a_f427iih6-pinctrl.dtsi  rscf_a_f427iih6.dts  rscf_a_f427iih6.yaml  rscf_a_f427iih6_defconfig
docs/: README_CN.md  getting-started.md  zephyr-user-manual.md
docs/ioc_json/: can_config.json  clock_config.json  dma_config.json  gpio_config.json  i2c_config.json  nvic_config.json  rtc_config.json  rtos_config.json  spi_config.json  summary.json  tim_config.json  usart_config.json  usb_config.json
docs/reference/: rscf_a_hardware_map.md
drivers/bsp/: bsp_can.c  bsp_dwt.c  bsp_log.c  bsp_pwm.c  bsp_spi.c  bsp_tim.c  bsp_usart.c
drivers/rscf/: rscf_boot.c  rscf_buzzer.c  rscf_buzzer.h  rscf_ext_uart_mux.c  rscf_ext_uart_mux.h  rscf_led_status.c  rscf_led_status.h  rscf_link_adapter.h  rscf_link_can.c  rscf_link_spi.c  rscf_link_uart.c  rscf_link_usb.c  rscf_power_switch.c  rscf_power_switch.h
dts/bindings/: vendor-prefixes.txt
dts/bindings/rscf/: ncurc,rscf-a-board.yaml  ncurc,rscf-buzzer.yaml  ncurc,rscf-dtof2510-group.yaml  ncurc,rscf-ext-uart-mux.yaml  ncurc,rscf-power-switch-bank.yaml  ncurc,rscf-servo-pwm.yaml
include/: AD7190.h  HC05.h  IMU.h  Kalman_filter.h  PID.h  bsp_can.h  bsp_dwt.h  bsp_log.h  bsp_pwm.h  bsp_spi.h  bsp_tim.h  bsp_usart.h  buzzer.h  controller.h  coordinate_system.h  crc16.h  crc8.h  daemon.h  dji_motor.h  dmmotor.h  general_def.h  gpio.h  led.h  linear_algebra.h  main.h  master_process.h  mhall.h  motor_def.h  motor_task.h  oled.h  remote_control.h  robot.h  robot_cmd.h  robot_task.h  seasky_protocol.h  servo_motor.h  spi.h  tim.h  unit_convert.h  usart.h  (+1 more)
include/rscf/: rscf_app_profile.h  rscf_boot.h  rscf_chassis_service.h  rscf_daemon_service.h  rscf_debug_fault.h  rscf_event_bus.h  rscf_health_service.h  rscf_microros_service.h  rscf_motor_service.h  rscf_robot_service.h  rscf_ros_bridge.h
mcu_comm/protocol_generator/: control_plane_enums.yaml  endpoint_schema.yaml  generator.py  link_roles.yaml  protocol_definition.json  system_cmd_schema.yaml  system_status_schema.yaml
mcu_comm/protocol_generator/templates/docs/: control_plane_bindings_md.j2  mcu_device_md.j2  system_cmd_layout_md.j2  system_status_layout_md.j2
mcu_comm/protocol_generator/templates/ros2/: CMakeLists_txt.j2  action.action.j2  can_transport_cpp.j2  can_transport_hpp.j2  comm_manager_cpp.j2  comm_manager_hpp.j2  device_config_json.j2  launch_py.j2  main_cpp.j2  mcu_comm_node_cpp.j2  mcu_comm_node_hpp.j2  msg.j2  package_xml.j2  packet_handlers_hpp.j2  packet_processor_cpp.j2  packet_processor_hpp.j2  protocol_parser_cpp.j2  protocol_parser_hpp.j2  serial_transport_cpp.j2  serial_transport_hpp.j2  service.srv.j2  tcp_transport_cpp.j2  tcp_transport_hpp.j2  test_comm_manager_connection_state_cpp.j2  transport_interface_hpp.j2  udp_frame_probe_cpp.j2
mcu_comm/protocol_generator/templates/stm32/: comm_manager_c.j2  comm_manager_h.j2  data_def_c.j2  data_def_h.j2  protocol_c.j2  protocol_h.j2  robot_interface_c.j2  robot_interface_h.j2  transport_can_c.j2  transport_can_h.j2  transport_interface_h.j2  transport_uart_c.j2  transport_uart_h.j2  transport_usb_c.j2  transport_usb_h.j2
mcu_comm/protocol_generator/templates/zephyr/: comm_manager_c.j2  comm_manager_h.j2  data_def_c.j2  data_def_h.j2  protocol_c.j2  protocol_h.j2  robot_interface_c.j2  (+8 more)
mcu_comm/protocol_generator/tests/: test_control_plane_schema.py  test_system_status_schema.py
modules/algorithm/: Kalman_filter.c  PID.c  coordinate_system.c  crc16.c  crc8.c  linear_algebra.c  user_lib.c
modules/compat/: ad7190.c  buzzer.c  controller.c  daemon.c  hc05.c  led.c  master_process.c  mhall.c  motor_task.c  oled.c  remote_control.c  robot.c  robot_cmd.c  seasky_protocol.c  unit_convert.c
modules/lib/libmicroros/: CMakeLists.txt  libmicroros.mk  patch_microros_sources.sh  sanitize_microros_env.sh  zephyr_toolchain.cmake.in
modules/motor/: dji_motor.c  dmmotor.c  servo_motor.c
modules/rscf/: Kconfig
modules/rscf/core/: rscf_app_profile.c
modules/rscf/devices/: rscf_dtof2510.c  rscf_dtof2510.h  rscf_imu_uart.c  rscf_imu_uart.h  rscf_saber_imu_compat.c
modules/rscf/services/: rscf_action_service.c  rscf_chassis_service.c  rscf_comm_service.c  rscf_comm_service.h  rscf_daemon_service.c  rscf_debug_fault.c  rscf_event_bus.c  rscf_health_service.c  rscf_link_service.c  rscf_link_service.h  rscf_microros_service.c  rscf_microros_service.h  rscf_motor_service.c  rscf_robot_service.c  rscf_ros_bridge.c  rscf_service_router.c
profiles/: Kconfig
ros2_ws/: README.md
ros2_ws/src/rscf_a_host/: package.xml  setup.cfg  setup.py
ros2_ws/src/rscf_a_host/config/: command_profile.yaml
ros2_ws/src/rscf_a_host/launch/: rscf_host_io.launch.py
ros2_ws/src/rscf_a_host/resource/: rscf_a_host
ros2_ws/src/rscf_a_host/rscf_a_host/: __init__.py  command_profile_node.py  monitor_node.py  status.py
ros2_ws/src/rscf_a_host/scripts/: run_agent_usb.sh
ros2_ws/src/rscf_link_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/rscf_link_bridge/launch/: rscf_link_bridge.launch.py
ros2_ws/src/rscf_link_bridge/src/: rscf_link_bridge_node.cpp
scripts/bootstrap/: bootstrap.sh  check_env.py
scripts/codegen/: rscf_mcu_comm_codegen.py
scripts/ioc/: validate_board_from_ioc.py
scripts/microros/: run_agent_usb.sh
tests/unit/: test_board_power_and_buzzer_mapping.py  test_check_env.py  test_cmsis_dsp_integration.py  test_comm_led_status_behavior.py  test_comm_service_transport_selection.py  test_comm_vnext_schema.py  test_github_actions_ci.py  test_ioc_json_alignment.py  test_jlink_vcom_overlay.py  test_mcu_comm_codegen.py  test_microros_onboarding.py  test_module_onboarding.py  test_repo_layout.py  test_ros2_host_workspace.py  test_ros2_serial_only_codegen.py  test_usb_and_chassis_integration.py
(+5 files in other folders)
